--- a/visual_translations/templates/visual_translations/accepted.html
+++ b/visual_translations/templates/visual_translations/accepted.html
@@ -6,7 +6,8 @@
         $(function pollService() {
 
             var uri = new URI(location);
-            var search = uri.segment().pop();
+            var segments = uri.segment(); segments.pop();  // removes empty string due to trailing slash
+            var search = segments.pop();
             var service = URI.expand(uri.pathname() + "../../service/{search}/", {"search": search}).normalizePathname();
 
             $.getJSON(service, uri.search(true), function (data, textStatus, jqXHR) {
