--- a/visual_translations/templates/visual_translations/ok.html
+++ b/visual_translations/templates/visual_translations/ok.html
@@ -1,5 +1,10 @@
 {% extends "core/base.html" %}
-{% load bootstrap_tags i18n %}
+{% load bootstrap_tags i18n static %}
+
+{% block css %}
+    {{ block.super }}
+    <link href="{% static "visual_translations/css/visual-translations.css" %}" rel="stylesheet" />
+{% endblock %}
 
 {% block body %}
     <div class="container-fluid">
