--- a/visual_translations/static/visual_translations/css/knob-extra.css
+++ b/visual_translations/static/visual_translations/css/knob-extra.css
@@ -67,10 +67,12 @@ section, footer{
 }
 
 .colorBar{
-	width:20px;
+	width:70px;
+    text-align: center;
 	height:8px;
 	position:absolute;
-	opacity:0;
+    color: white;
+	opacity:1;
 	-moz-transition:0.3s;
 	-webkit-transition:0.3s;
 	-o-transition:0.3s;
@@ -78,7 +80,7 @@ section, footer{
 }
 
 .colorBar.active{
-	opacity:1;
+	color: red;
 }
 
 
