Cleaning more code.

--- a/visual_translations/templates/visual_translations/controller.html
+++ b/visual_translations/templates/visual_translations/controller.html
@@ -22,7 +22,7 @@
         <div id="bars">
             <div id="control"></div>
             {% for word in words %}
-                <div class="colorBar">{{ word }}</div>
+                <div class="knobLabel">{{ word }}</div>
             {% endfor %}
         </div>
     </section>
