--- a/visual_translations/templates/visual_translations/map.html
+++ b/visual_translations/templates/visual_translations/map.html
@@ -164,15 +164,14 @@
             }
         };
         VT.zoomLevel = VT.functions.getParameterByName("zoom");
-        VT.webSocketEndpoint = "{{ WEBSOCKET_URI }}visual-translations-map?subscribe-broadcast&publish-broadcast&echo";
+        VT.webSocketEndpoint = "{{ WEBSOCKET_URI }}visual-translations-map?subscribe-broadcast";
         VT.topoJSONFile = "{% static region_topo_json %}";
 
         // TEST CODE
         $(document).on('keydown', function(event){
             switch(event.which) {
                 case 49:  // key: 1
-                    //VT.functions.scrollDocument("top-left");
-                    console.log(new Date().getTime());
+                    VT.functions.scrollDocument("top-left");
                     break;
             }
         });
